# tinykv-rs

./: .gitignore  Cargo.toml  README.md
kv/: Cargo.toml  build.rs
kv/proto/: coprocessor.proto  errorpb.proto  kvrpcpb.proto  metapb.proto  schedulerpb.proto  tinykvpb.proto
kv/src/: config.rs  lib.rs  main.rs  server.rs  storage.rs
kv/src/storage/: modify.rs  standalone_storage.rs
src/: error.rs  kv.rs  lib.rs
tests/: tests.rs
